<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_screen_large"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.varda.naviraklio.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_marginBottom="139dp"
        android:clickable="true"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/action_sign_up_link"
        android:textSize="18sp"
        android:theme="@style/white_transparent_backround"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/action_sign_in"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:text="Sign Up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="320dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/login_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4FFFFFF">

                <AutoCompleteTextView
                    android:id="@+id/textInputEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:theme="@style/black_text_opaque" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4FFFFFF">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified|flagNavigatePrevious"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:theme="@style/black_text_opaque" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
